crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_DHP8.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: DHP8
input: "[foo, bar, 42]\n"
diagnostics:

cst:
YAML_STREAM@0..15
  YAML_DOCUMENT@0..15
    YAML_FLOW_SEQUENCE@0..14
      YAML_FLOW_INDICATOR@0..1 "["
      YAML_FLOW_SEQUENCE_ITEM@1..4
        YAML_SCALAR@1..4
          YAML_SCALAR_TEXT@1..4 "foo"
      YAML_FLOW_INDICATOR@4..5 ","
      WHITESPACE@5..6 " "
      YAML_FLOW_SEQUENCE_ITEM@6..9
        YAML_SCALAR@6..9
          YAML_SCALAR_TEXT@6..9 "bar"
      YAML_FLOW_INDICATOR@9..10 ","
      WHITESPACE@10..11 " "
      YAML_FLOW_SEQUENCE_ITEM@11..13
        YAML_SCALAR@11..13
          YAML_SCALAR_TEXT@11..13 "42"
      YAML_FLOW_INDICATOR@13..14 "]"
    NEWLINE@14..15 "\n"
