crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_DK3J.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DK3J
input: "--- >\nline1\n# no comment\nline3\n"
diagnostics:

cst:
YAML_STREAM@0..31
  YAML_DOCUMENT@0..31
    YAML_DOCUMENT_START@0..3 "---"
    WHITESPACE@3..4 " "
    YAML_SCALAR@4..31
      YAML_SCALAR_TEXT@4..5 ">"
      NEWLINE@5..6 "\n"
      YAML_SCALAR_TEXT@6..11 "line1"
      NEWLINE@11..12 "\n"
      YAML_SCALAR_TEXT@12..24 "# no comment"
      NEWLINE@24..25 "\n"
      YAML_SCALAR_TEXT@25..30 "line3"
      NEWLINE@30..31 "\n"
