crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_DK4H.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 740
expression: snapshot
---
case_id: DK4H
input: "---\n[ key\n  : value ]\n"
diagnostics:
YAML_PARSE_UNEXPECTED_DEDENT:unexpected dedent token while parsing block map@22..22
cst:
