crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_DMG6.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DMG6
input: "key:\n  ok: 1\n wrong: 2\n"
diagnostics:
YAML_LEX_ERROR:invalid plain mapping line@0..4
cst:
