crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_DWX9.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DWX9
input: "|\n \n  \n  literal\n   \n  \n  text\n\n # Comment\n"
diagnostics:

cst:
YAML_STREAM@0..43
  YAML_DOCUMENT@0..43
    YAML_SCALAR@0..32 "|\n \n  \n  literal\n   \n ..."
    WHITESPACE@32..33 " "
    YAML_COMMENT@33..42 "# Comment"
    NEWLINE@42..43 "\n"
