crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_E76Z.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: E76Z
input: "&a a: &b b\n*b : *a\n"
diagnostics:

cst:
YAML_STREAM@0..19
  YAML_DOCUMENT@0..19
    YAML_BLOCK_MAP@0..19
      YAML_BLOCK_MAP_ENTRY@0..11
        YAML_BLOCK_MAP_KEY@0..5
          YAML_ANCHOR@0..2 "&a"
          WHITESPACE@2..3 " "
          YAML_SCALAR@3..4 "a"
          YAML_COLON@4..5 ":"
        YAML_BLOCK_MAP_VALUE@5..11
          WHITESPACE@5..6 " "
          YAML_ANCHOR@6..8 "&b"
          WHITESPACE@8..9 " "
          YAML_SCALAR@9..10 "b"
          NEWLINE@10..11 "\n"
      YAML_BLOCK_MAP_ENTRY@11..19
        YAML_BLOCK_MAP_KEY@11..15
          YAML_ALIAS@11..13 "*b"
          WHITESPACE@13..14 " "
          YAML_COLON@14..15 ":"
        YAML_BLOCK_MAP_VALUE@15..19
          WHITESPACE@15..16 " "
          YAML_ALIAS@16..18 "*a"
          NEWLINE@18..19 "\n"
