crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_EB22.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: EB22
input: "---\nscalar1 # comment\n%YAML 1.2\n---\nscalar2\n"
diagnostics:
YAML_PARSE_DIRECTIVE_AFTER_CONTENT:directive requires document end before subsequent directives@22..31
cst:
