crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_EW3V.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: EW3V
input: "k1: v1\n k2: v2\n"
diagnostics:
YAML_PARSE_INVALID_KEY_TOKEN:implicit key cannot span lines@4..10
cst:
