crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_EX5H.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: EX5H
input: "---\na\nb  \n  c\nd\n\ne\n"
diagnostics:

cst:
YAML_STREAM@0..19
  YAML_DOCUMENT@0..19
    YAML_DOCUMENT_START@0..3 "---"
    NEWLINE@3..4 "\n"
    YAML_SCALAR@4..18
      YAML_SCALAR_TEXT@4..18 "a\nb  \n  c\nd\n\ne"
    NEWLINE@18..19 "\n"
