crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_EXG3.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: EXG3
input: "---\n---word1\nword2\n"
diagnostics:

cst:
YAML_STREAM@0..19
  YAML_DOCUMENT@0..19
    YAML_DOCUMENT_START@0..3 "---"
    NEWLINE@3..4 "\n"
    YAML_SCALAR@4..18
      YAML_SCALAR_TEXT@4..12 "---word1"
      NEWLINE@12..13 "\n"
      YAML_SCALAR_TEXT@13..18 "word2"
    NEWLINE@18..19 "\n"
