crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_F2C7.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: F2C7
input: " - &a !!str a\n - !!int 2\n - !!int &c 4\n - &d d\n"
diagnostics:

cst:
YAML_STREAM@0..47
  WHITESPACE@0..1 " "
  YAML_DOCUMENT@1..47
    YAML_BLOCK_SEQUENCE@1..47
      YAML_BLOCK_SEQUENCE_ITEM@1..15
        YAML_BLOCK_SEQ_ENTRY@1..2 "-"
        WHITESPACE@2..3 " "
        YAML_ANCHOR@3..5 "&a"
        WHITESPACE@5..6 " "
        YAML_TAG@6..11 "!!str"
        WHITESPACE@11..12 " "
        YAML_SCALAR@12..13 "a"
        NEWLINE@13..14 "\n"
        WHITESPACE@14..15 " "
      YAML_BLOCK_SEQUENCE_ITEM@15..26
        YAML_BLOCK_SEQ_ENTRY@15..16 "-"
        WHITESPACE@16..17 " "
        YAML_TAG@17..22 "!!int"
        WHITESPACE@22..23 " "
        YAML_SCALAR@23..24 "2"
        NEWLINE@24..25 "\n"
        WHITESPACE@25..26 " "
      YAML_BLOCK_SEQUENCE_ITEM@26..40
        YAML_BLOCK_SEQ_ENTRY@26..27 "-"
        WHITESPACE@27..28 " "
        YAML_TAG@28..33 "!!int"
        WHITESPACE@33..34 " "
        YAML_ANCHOR@34..36 "&c"
        WHITESPACE@36..37 " "
        YAML_SCALAR@37..38 "4"
        NEWLINE@38..39 "\n"
        WHITESPACE@39..40 " "
      YAML_BLOCK_SEQUENCE_ITEM@40..47
        YAML_BLOCK_SEQ_ENTRY@40..41 "-"
        WHITESPACE@41..42 " "
        YAML_ANCHOR@42..44 "&d"
        WHITESPACE@44..45 " "
        YAML_SCALAR@45..46 "d"
        NEWLINE@46..47 "\n"
